--- a/html/event.html
+++ b/html/event.html
@@ -1,88 +1,118 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
+  <!--Googleフォント-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css"
+    media="screen and (min-width:0px) and (max-width:870px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css"
+    media="screen and (min-width:870px) and (max-width:1270px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)">
+  <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" /> <!--Apple用サイトアイコン-->
-  <meta charset="utf-8"> <!--文字セット-->
+  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <!--サイトアイコン-->
+  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <!--サイトアイコン-->
+  <link rel="apple-touch-icon-precomposed" href="../img/icon.png" />
+  <!--Apple用サイトアイコン-->
+  <meta charset="utf-8">
+  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>寮生活 | 高城寮</title> <!--タイトル-->
-  <meta name="description" content="高城寮公式ホームページです。"> <!--簡易説明-->
-  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
-  <meta property="og:title" content="寮生活 | 高城寮"/> <!--タイトル-->
+  <title>寮生活 | 高城寮</title>
+  <!--タイトル-->
+  <meta name="description" content="高城寮公式ホームページです。">
+  <!--簡易説明-->
+  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
+  <!--URL指定-->
+  <meta property="og:title" content="寮生活 | 高城寮" />
+  <!--タイトル-->
   <meta property="og:type" content="website">
-  <meta property="og:description" content="高城寮公式ホームページです。" /> <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
+  <meta property="og:description" content="高城寮公式ホームページです。" />
+  <!--簡易説明-->
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" />
+  <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:site_name" content="寮生活 | 高城寮" /> <!--タイトル-->
-  <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
+  <meta property="og:site_name" content="寮生活 | 高城寮" />
+  <!--タイトル-->
+  <meta property="og:locale" content="ja_JP" />
+  <!--言語設定-->
 </head>
+
 <body>
   <!--header-->
   <header id="header">
-    <a href="../index.html"><h1 id="title">Takajo Dormitory</h1></a>
-    <a href="../en/index.html"><h1 id="lang">ENGLISH</h3></a>
+    <a href="../index.html">
+      <h1 id="title">Takajo Dormitory</h1>
+    </a>
+    <a href="../en/index.html">
+      <h1 id="lang">ENGLISH</h1>
+    </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
-</header>
+  </header>
 
-<div id="wrapper">
-  <p class="btn-gnavi">
-    <span></span>
-    <span></span>
-    <span></span>
-  </p>
-  <nav id="bar">
-    <ul>
-      <div class="search">
-        <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
-        <div class="gcse-search"></div>
-      </div>
-      <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
-      <li><a href="purpose.html">寮の目的</a></li>
-      <li><a href="facility.html">施設,設備</a></li>
-      <li><a href="event.html">寮生活</a></li>
-      <li><a href="cost.html">学寮経費</a></li>
-      <li><a href="../belonging/index.html">寮生用ページ</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
-    </ul>
-  </nav>
-</div>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <div class="search">
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
+          <div class="gcse-search"></div>
+        </div>
+        <li><a href="../en/index.html">
+            <h3 class="lang">ENGLISH</h3>
+          </a></li>
+        <li><a href="purpose.html">寮の目的</a></li>
+        <li><a href="facility.html">施設,設備</a></li>
+        <li><a href="event.html">寮生活</a></li>
+        <li><a href="cost.html">学寮経費</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </div>
   <!--container-->
   <div id="container">
-      <div class="row">
-        <div class="col"> <!--左側-->
-          <h4>寮生活</h4>
-          <div class="border-top" style="padding:10px;"> <!--上ボーダー -->
-            　高城寮では寮を「他人を思いやりながら、自分の価値と価値観を高める場」とし、次のような寮を目指しています。<br>
-            ・住みよい安全な寮<br>
-            ・勉強のできる寮<br>
-            ・愛と徳にあふれる寮<br>
-            ・元気な寮<br>
-            ・楽しい寮<br>
-            ・きれいな寮<br>
-            ・規律ある寮<br>
-          </div>
-          <br>
+    <div class="row">
+      <div class="col">
+        <!--左側-->
+        <h4>寮生活</h4>
+        <div class="border-top" style="padding:10px;">
+          <!--上ボーダー -->
+          　高城寮では寮を「他人を思いやりながら、自分の価値と価値観を高める場」とし、次のような寮を目指しています。<br>
+          ・住みよい安全な寮<br>
+          ・勉強のできる寮<br>
+          ・愛と徳にあふれる寮<br>
+          ・元気な寮<br>
+          ・楽しい寮<br>
+          ・きれいな寮<br>
+          ・規律ある寮<br>
         </div>
-        <div class="col"> <!--右側-->
-          <h4>高城寮の行事</h4>
-          <div class="border-top" style="padding:10px;"> <!--上ボーダー -->
-            　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
-            年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
-            　勉強面では通学生と比較して同級生や上級生に相談しやすい環境だといえるでしょう。また、試験前には食堂にて勉強会を行っています。
-          </div>
-          <br>
-          <!--追加項目はここより下に-->
-    
+        <br>
+      </div>
+      <div class="col">
+        <!--右側-->
+        <h4>高城寮の行事</h4>
+        <div class="border-top" style="padding:10px;">
+          <!--上ボーダー -->
+          　高城寮では寮生の自主性を重んじ、寮生活に関わるさまざまな事柄を寮生会が中心となって行っています。
+          年間を通し、新入寮生歓迎マッチや予餞会など各種のイベントが行われていますが、これらのイベントも寮生会が中心となり企画・運営しています。<br>
+          　勉強面では通学生と比較して同級生や上級生に相談しやすい環境だといえるでしょう。また、試験前には食堂にて勉強会を行っています。
         </div>
+        <br>
+        <!--追加項目はここより下に-->
+
+      </div>
     </div>
 
     <table class="table table-striped">
@@ -166,7 +196,8 @@
             ・勉強会<br>
             ・寮生会役員引継会<br>
           </td>
-        </tr><tr>
+        </tr>
+        <tr>
           <th scope="row">2月</th>
           <td>
             ・卒寮会<br>
@@ -180,11 +211,15 @@
   <!--footer-->
   <div class="footer">
     <img src="../img/footer.png">
-    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
+    <a href="site.html">
+      <p><span id="site">このサイトについて</span></p>
+    </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script> <!--JS取り込み-->
-  </body>
+  <script src="../script/common.js"></script>
+  <!--JS取り込み-->
+</body>
+
 </html>
