--- a/html/site.html
+++ b/html/site.html
@@ -1,60 +1,86 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet"> <!--Googleフォント-->
-  <link rel="stylesheet" href="../style/commonMin.css" type="text/css" media="screen and (min-width:0px) and (max-width:870px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/commonMid.css" type="text/css" media="screen and (min-width:870px) and (max-width:1270px)"> <!--共通CSS-->
-  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)"> <!--共通CSS-->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400&display=swap" rel="stylesheet">
+  <!--Googleフォント-->
+  <link rel="stylesheet" href="../style/commonMin.css" type="text/css"
+    media="screen and (min-width:0px) and (max-width:870px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/commonMid.css" type="text/css"
+    media="screen and (min-width:870px) and (max-width:1270px)">
+  <!--共通CSS-->
+  <link rel="stylesheet" href="../style/common.css" type="text/css" media="screen and (min-width:1270px)">
+  <!--共通CSS-->
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- Font Awesome -->
-  <link rel="icon" href="../img/icon.png" sizes="32x32" /> <!--サイトアイコン-->
-  <link rel="icon" href="../Img/icon.png" sizes="192x192" /> <!--サイトアイコン-->
-  <link rel="apple-touch-icon-precomposed" href="image/icon.png" /> <!--Apple用サイトアイコン-->
-  <meta charset="utf-8"> <!--文字セット-->
+  <link rel="icon" href="../img/icon.png" sizes="32x32" />
+  <!--サイトアイコン-->
+  <link rel="icon" href="../Img/icon.png" sizes="192x192" />
+  <!--サイトアイコン-->
+  <link rel="apple-touch-icon-precomposed" href="image/icon.png" />
+  <!--Apple用サイトアイコン-->
+  <meta charset="utf-8">
+  <!--文字セット-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>本サイトについて | 高城寮</title> <!--タイトル-->
-  <meta name="description" content="寮公式ホームページです。"> <!--簡易説明-->
-  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/"/> <!--URL指定-->
-  <meta property="og:title" content="本サイトについて | 高城寮"/> <!--タイトル-->
+  <title>本サイトについて | 高城寮</title>
+  <!--タイトル-->
+  <meta name="description" content="寮公式ホームページです。">
+  <!--簡易説明-->
+  <meta property="og:url" content="https://www.tokuyama.ac.jp/dormitory/" />
+  <!--URL指定-->
+  <meta property="og:title" content="本サイトについて | 高城寮" />
+  <!--タイトル-->
   <meta property="og:type" content="website">
-  <meta property="og:description" content="寮公式ホームページです。" /> <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" /> <!--サイトアイコンURL-->
+  <meta property="og:description" content="寮公式ホームページです。" />
+  <!--簡易説明-->
+  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/blob/master/img/icon.png" />
+  <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
-  <meta property="og:site_name" content="本サイトについて | 高城寮" /> <!--タイトル-->
-  <meta property="og:locale" content="ja_JP" /> <!--言語設定-->
+  <meta property="og:site_name" content="本サイトについて | 高城寮" />
+  <!--タイトル-->
+  <meta property="og:locale" content="ja_JP" />
+  <!--言語設定-->
 </head>
+
 <body>
   <!--header-->
   <header id="header">
-    <a href="../index.html"><h1 id="title">Takajo Dormitory</h1></a>
-    <a href="../en/index.html"><h1 id="lang">ENGLISH</h3></a>
+    <a href="../index.html">
+      <h1 id="title">Takajo Dormitory</h1>
+    </a>
+    <a href="../en/index.html">
+      <h1 id="lang">ENGLISH</h1>
+    </a>
     <a href="location.html"><i class="fas fa-map-marker-alt"></i></a>
     <i class="fas fa-search"></i>
-</header>
+  </header>
 
-<div id="wrapper">
-  <p class="btn-gnavi">
-    <span></span>
-    <span></span>
-    <span></span>
-  </p>
-  <nav id="bar">
-    <ul>
-      <div class="search">
-        <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
-        <div class="gcse-search"></div>
-      </div>
-      <li><a href="../en/index.html"><h3 class="lang">ENGLISH</h3></a></li>
-      <li><a href="purpose.html">寮の目的</a></li>
-      <li><a href="facility.html">施設,設備</a></li>
-      <li><a href="event.html">寮生活</a></li>
-      <li><a href="cost.html">学寮経費</a></li>
-      <li><a href="../belonging/index.html">寮生用ページ</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
-    </ul>
-  </nav>
-</div>
+  <div id="wrapper">
+    <p class="btn-gnavi">
+      <span></span>
+      <span></span>
+      <span></span>
+    </p>
+    <nav id="bar">
+      <ul>
+        <div class="search">
+          <script async src="https://cse.google.com/cse.js?cx=2af17a87c0426de29"></script>
+          <div class="gcse-search"></div>
+        </div>
+        <li><a href="../en/index.html">
+            <h3 class="lang">ENGLISH</h3>
+          </a></li>
+        <li><a href="purpose.html">寮の目的</a></li>
+        <li><a href="facility.html">施設,設備</a></li>
+        <li><a href="event.html">寮生活</a></li>
+        <li><a href="cost.html">学寮経費</a></li>
+        <li><a href="../belonging/index.html">寮生用ページ</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </div>
   <!--container-->
   <div id="container">
     <h2>
@@ -63,7 +89,8 @@
     <h3>目的</h3>
     <div class="border-top" style="padding:10px;"> 徳山工業高等専門学校高城寮(以下，高城寮)が設置・運営するウェブサイトは、
       高城寮の活動を学内外に公開するとともに、寮生の生活を支援する情報を提供することを目的としています。
-    </div> <!--上ボーダー -->
+    </div>
+    <!--上ボーダー -->
     <br>
     <h3>著作権</h3>
     <div class="border-top" style="padding:10px;">高城寮ウェブサイトが提供するコンテンツの著作権は、高城寮に帰属します。
@@ -79,7 +106,8 @@
     <div class="border-top" style="padding:10px;">高城寮ウェブサイトへのリンクは自由にしていただいて構いませんが、
       urlの変更・削除について告知いたしません。また、高城寮の活動の趣旨に反するサイト（公序良俗に反する、合法性に懸念があるなど）からの
       リンクを禁止します。
-    </div> <!--上ボーダー -->
+    </div>
+    <!--上ボーダー -->
 
 
   </div>
@@ -87,11 +115,15 @@
   <!--footer-->
   <div class="footer">
     <img src="../img/footer.png">
-    <a href="site.html"><p><span id="site">このサイトについて</span></p></a>
+    <a href="site.html">
+      <p><span id="site">このサイトについて</span></p>
+    </a>
     <p id="copyright">© 2020-2021 TakajoDormitory All Rights Reserved.</p>
   </div>
 
   <script type="text/javascript" src="../script/jquery-3.5.1.min.js"></script> <!-- jquery -->
-  <script src="../script/common.js"></script> <!--JS取り込み-->
-  </body>
+  <script src="../script/common.js"></script>
+  <!--JS取り込み-->
+</body>
+
 </html>
