--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -32,7 +32,7 @@
   <meta property="og:type" content="website">
   <meta property="og:description" content="Official HomePage of Takajo Dormitory." />
   <!--簡易説明-->
-  <meta property="og:image" content="https://github.com/TakajoDormitory/HomePage/assets/images/icon.png" />
+  <meta property="og:image" content="https://TakajoDormitory.github.io/HomePage/assets/images/icon.png" />
   <!--サイトアイコンURL-->
   <meta name="twitter:card" content="summary" />
   <meta property="twitter:site" content="@TakajoDormitory">
